--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -645,7 +645,7 @@
        "  * time     (time) float64 48.35 48.4\n",
        "  * run      (run) &lt;U14 &#x27;jet/94875/8100&#x27; &#x27;jet/94875/8101&#x27; ... &#x27;jet/94875/8103&#x27;\n",
        "Data variables:\n",
-       "    psi      (run, time, dim1, dim2) float64 1.62e-10 1.62e-10 ... 2.145e-09</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-7dc643c4-5f9a-4a40-a860-78fc30298123' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-7dc643c4-5f9a-4a40-a860-78fc30298123' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>run</span>: 4</li><li><span class='xr-has-index'>time</span>: 2</li><li><span class='xr-has-index'>dim1</span>: 101</li><li><span class='xr-has-index'>dim2</span>: 101</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-d6ffc386-8cb0-48dc-b8eb-3fd92a5f1645' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d6ffc386-8cb0-48dc-b8eb-3fd92a5f1645' class='xr-section-summary' >Coordinates: <span>(4)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>dim1</span></div><div class='xr-var-dims'>(dim1)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>1.957 1.976 1.995 ... 3.843 3.862</div><input id='attrs-5b1d7c51-e52d-42ff-b1ee-5ce08579a9b8' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5b1d7c51-e52d-42ff-b1ee-5ce08579a9b8' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b893de48-804d-487d-a09d-d011ef59c4b3' class='xr-var-data-in' type='checkbox'><label for='data-b893de48-804d-487d-a09d-d011ef59c4b3' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1.957387, 1.976433, 1.995476, 2.014519, 2.033563, 2.052606, 2.071649,\n",
+       "    psi      (run, time, dim1, dim2) float64 1.62e-10 1.62e-10 ... 2.145e-09</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.Dataset</div></div><ul class='xr-sections'><li class='xr-section-item'><input id='section-9d31482c-33b5-4844-99d9-d2183e14e33d' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-9d31482c-33b5-4844-99d9-d2183e14e33d' class='xr-section-summary'  title='Expand/collapse section'>Dimensions:</label><div class='xr-section-inline-details'><ul class='xr-dim-list'><li><span class='xr-has-index'>run</span>: 4</li><li><span class='xr-has-index'>time</span>: 2</li><li><span class='xr-has-index'>dim1</span>: 101</li><li><span class='xr-has-index'>dim2</span>: 101</li></ul></div><div class='xr-section-details'></div></li><li class='xr-section-item'><input id='section-906fcc96-6383-415a-bb5d-03bad9d55099' class='xr-section-summary-in' type='checkbox'  checked><label for='section-906fcc96-6383-415a-bb5d-03bad9d55099' class='xr-section-summary' >Coordinates: <span>(4)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>dim1</span></div><div class='xr-var-dims'>(dim1)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>1.957 1.976 1.995 ... 3.843 3.862</div><input id='attrs-074daaab-af65-48f2-95db-65592f7de0d0' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-074daaab-af65-48f2-95db-65592f7de0d0' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-667a6275-101a-43c8-b384-eae3d8e2f329' class='xr-var-data-in' type='checkbox'><label for='data-667a6275-101a-43c8-b384-eae3d8e2f329' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([1.957387, 1.976433, 1.995476, 2.014519, 2.033563, 2.052606, 2.071649,\n",
        "       2.090692, 2.109736, 2.128779, 2.147822, 2.166866, 2.185909, 2.204952,\n",
        "       2.223996, 2.243039, 2.262082, 2.281126, 2.300169, 2.319212, 2.338256,\n",
        "       2.357299, 2.376342, 2.395386, 2.414429, 2.433472, 2.452515, 2.471559,\n",
@@ -659,7 +659,7 @@
        "       3.423725, 3.442768, 3.461811, 3.480855, 3.499898, 3.518941, 3.537985,\n",
        "       3.557028, 3.576071, 3.595114, 3.614158, 3.633201, 3.652244, 3.671288,\n",
        "       3.690331, 3.709374, 3.728418, 3.747461, 3.766504, 3.785548, 3.804591,\n",
-       "       3.823634, 3.842678, 3.861723])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>dim2</span></div><div class='xr-var-dims'>(dim2)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-1.528 -1.495 -1.463 ... 1.65 1.682</div><input id='attrs-dbe6c13e-63aa-4de9-a082-7143f489ae75' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-dbe6c13e-63aa-4de9-a082-7143f489ae75' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0aa54ef7-b551-4e7e-a4c1-2276e476015c' class='xr-var-data-in' type='checkbox'><label for='data-0aa54ef7-b551-4e7e-a4c1-2276e476015c' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-1.527541, -1.495446, -1.463355, -1.431263, -1.399172, -1.36708 ,\n",
+       "       3.823634, 3.842678, 3.861723])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>dim2</span></div><div class='xr-var-dims'>(dim2)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-1.528 -1.495 -1.463 ... 1.65 1.682</div><input id='attrs-0460cb70-9193-44a8-a926-f2ac339d0831' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-0460cb70-9193-44a8-a926-f2ac339d0831' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f1366e43-3bc5-424d-beac-f806bcec983b' class='xr-var-data-in' type='checkbox'><label for='data-f1366e43-3bc5-424d-beac-f806bcec983b' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-1.527541, -1.495446, -1.463355, -1.431263, -1.399172, -1.36708 ,\n",
        "       -1.334988, -1.302897, -1.270805, -1.238713, -1.206622, -1.17453 ,\n",
        "       -1.142439, -1.110347, -1.078255, -1.046164, -1.014072, -0.981981,\n",
        "       -0.949889, -0.917797, -0.885706, -0.853614, -0.821523, -0.789431,\n",
@@ -675,8 +675,8 @@
        "        0.975607,  1.007699,  1.039791,  1.071882,  1.103974,  1.136066,\n",
        "        1.168157,  1.200249,  1.23234 ,  1.264432,  1.296524,  1.328615,\n",
        "        1.360707,  1.392798,  1.42489 ,  1.456982,  1.489073,  1.521165,\n",
-       "        1.553256,  1.585348,  1.61744 ,  1.649531,  1.681626])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>48.35 48.4</div><input id='attrs-191569d6-f988-4c0d-83b9-dbde0bafc389' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-191569d6-f988-4c0d-83b9-dbde0bafc389' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-cbc5b502-20a5-4699-8511-9125be034c61' class='xr-var-data-in' type='checkbox'><label for='data-cbc5b502-20a5-4699-8511-9125be034c61' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([48.350001, 48.4     ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>run</span></div><div class='xr-var-dims'>(run)</div><div class='xr-var-dtype'>&lt;U14</div><div class='xr-var-preview xr-preview'>&#x27;jet/94875/8100&#x27; ... &#x27;jet/94875/...</div><input id='attrs-c7811c78-1fb9-49be-a726-fa333fcbbce5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c7811c78-1fb9-49be-a726-fa333fcbbce5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-67c70db8-5011-48e8-858d-57efe54dd460' class='xr-var-data-in' type='checkbox'><label for='data-67c70db8-5011-48e8-858d-57efe54dd460' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;jet/94875/8100&#x27;, &#x27;jet/94875/8101&#x27;, &#x27;jet/94875/8102&#x27;, &#x27;jet/94875/8103&#x27;],\n",
-       "      dtype=&#x27;&lt;U14&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-d354eb6c-83cb-431a-a0cf-333284a10875' class='xr-section-summary-in' type='checkbox'  checked><label for='section-d354eb6c-83cb-431a-a0cf-333284a10875' class='xr-section-summary' >Data variables: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>psi</span></div><div class='xr-var-dims'>(run, time, dim1, dim2)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>1.62e-10 1.62e-10 ... 2.145e-09</div><input id='attrs-a6158978-dd74-447c-b700-9720ddb6f657' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a6158978-dd74-447c-b700-9720ddb6f657' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-c2343609-0d96-4d7f-b8f1-211a0b9af1da' class='xr-var-data-in' type='checkbox'><label for='data-c2343609-0d96-4d7f-b8f1-211a0b9af1da' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[[[1.61984589e-10, 1.61984589e-10, 1.61984589e-10, ...,\n",
+       "        1.553256,  1.585348,  1.61744 ,  1.649531,  1.681626])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>time</span></div><div class='xr-var-dims'>(time)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>48.35 48.4</div><input id='attrs-dfbc4144-5d56-483d-ba34-5fe1c11951cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-dfbc4144-5d56-483d-ba34-5fe1c11951cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-f4ad4174-a6f8-4f9b-8d88-99227827b580' class='xr-var-data-in' type='checkbox'><label for='data-f4ad4174-a6f8-4f9b-8d88-99227827b580' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([48.350001, 48.4     ])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>run</span></div><div class='xr-var-dims'>(run)</div><div class='xr-var-dtype'>&lt;U14</div><div class='xr-var-preview xr-preview'>&#x27;jet/94875/8100&#x27; ... &#x27;jet/94875/...</div><input id='attrs-689a117a-0268-4671-91ab-967379785aa5' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-689a117a-0268-4671-91ab-967379785aa5' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9244d650-5b3f-4394-8f5d-2a19d159e9d8' class='xr-var-data-in' type='checkbox'><label for='data-9244d650-5b3f-4394-8f5d-2a19d159e9d8' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([&#x27;jet/94875/8100&#x27;, &#x27;jet/94875/8101&#x27;, &#x27;jet/94875/8102&#x27;, &#x27;jet/94875/8103&#x27;],\n",
+       "      dtype=&#x27;&lt;U14&#x27;)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c8f95476-2125-4757-bf81-94cf0192f1fb' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c8f95476-2125-4757-bf81-94cf0192f1fb' class='xr-section-summary' >Data variables: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span>psi</span></div><div class='xr-var-dims'>(run, time, dim1, dim2)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>1.62e-10 1.62e-10 ... 2.145e-09</div><input id='attrs-7b5b86e3-2fa2-446d-87e4-886600450492' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7b5b86e3-2fa2-446d-87e4-886600450492' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-eb43f5d9-92e5-4476-ad88-b874a1dcbba8' class='xr-var-data-in' type='checkbox'><label for='data-eb43f5d9-92e5-4476-ad88-b874a1dcbba8' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([[[[1.61984589e-10, 1.61984589e-10, 1.61984589e-10, ...,\n",
        "          1.61984589e-10, 1.61984589e-10, 1.61984589e-10],\n",
        "         [1.61984589e-10, 1.61984589e-10, 1.61984589e-10, ...,\n",
        "          1.61984589e-10, 1.61984589e-10, 1.61984589e-10],\n",
@@ -716,7 +716,7 @@
        "         [2.14540845e-09, 2.14540845e-09, 2.14540845e-09, ...,\n",
        "          2.14540845e-09, 2.14540845e-09, 2.14540845e-09],\n",
        "         [2.14540845e-09, 2.14540845e-09, 2.14540845e-09, ...,\n",
-       "          2.14540845e-09, 2.14540845e-09, 2.14540845e-09]]]])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-ecec5283-d7ed-464e-ac90-8f22695b75e8' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-ecec5283-d7ed-464e-ac90-8f22695b75e8' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
+       "          2.14540845e-09, 2.14540845e-09, 2.14540845e-09]]]])</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-fe7fe14a-15cf-4ef4-a38c-ea15eefde08e' class='xr-section-summary-in' type='checkbox' disabled ><label for='section-fe7fe14a-15cf-4ef4-a38c-ea15eefde08e' class='xr-section-summary'  title='Expand/collapse section'>Attributes: <span>(0)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.Dataset>\n",
@@ -760,7 +760,7 @@
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x2b279e1d51d0>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x2b8b79a34410>"
       ]
      },
      "execution_count": 11,
@@ -796,17 +796,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 12,
    "id": "cb8b5012",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x2b27a33b0fd0>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x2b8b7bcefe50>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -839,17 +839,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "id": "3f7dfcf0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<xarray.plot.facetgrid.FacetGrid at 0x2b27a33d19d0>"
+       "<xarray.plot.facetgrid.FacetGrid at 0x2b8b7e983950>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
