revised notebooks and added ion example

--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -44,13 +44,17 @@
   {
    "cell_type": "markdown",
    "id": "37dcefa3",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "## Defining variables\n",
     "\n",
     "Then we must define the relations between the data. This is done via the `Variable` model.\n",
     "\n",
     "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `$time`, which links this dimension to the variable named `time`. \n",
+    "\n",
+    "The special character `*` denotes that it is a dimension, which should also be specified in the `dims` list. \n",
     "\n",
     "Variables like `zeff` and others use `rho_tor_norm` as the coordinate. But, unfortunately, `rho_tor_norm` differs slightly between time steps. Therefore we first assign an arbitrary placeholder dimension `x`. We will solve this in the next cell."
    ]
@@ -67,16 +71,16 @@
     "variables = (\n",
     "    Variable(name='zeff',\n",
     "             ids='core_profiles',\n",
-    "             path='profiles_1d/$time/zeff',\n",
-    "             dims=['x']),\n",
+    "             path='profiles_1d/*/zeff',\n",
+    "             dims=['time','x']),\n",
     "    Variable(name='t_i_average',\n",
     "             ids='core_profiles',\n",
-    "             path='profiles_1d/$time/t_i_average',\n",
-    "             dims=['x']),\n",
+    "             path='profiles_1d/*/t_i_average',\n",
+    "             dims=['time','x']),\n",
     "    Variable(name='rho_tor_norm',\n",
     "             ids='core_profiles',\n",
-    "             path='profiles_1d/$time/grid/rho_tor_norm',\n",
-    "             dims=['x']),\n",
+    "             path='profiles_1d/*/grid/rho_tor_norm',\n",
+    "             dims=['time','x']),\n",
     "    Variable(name='time',\n",
     "             ids='core_profiles',\n",
     "             path='time',\n",
