--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Then we must define the relations between the data. This is done via the `Variable` model.\n",
     "\n",
-    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `$time`, which links this dimension to the variable named `time`. \n",
+    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `*`, which links this dimension to the variable named `time`. \n",
     "\n",
     "2D variables like `psi` have two dimensions, in this case we use `grid/dim1` and `grid/dim2`. Because these may vary between time slices, we assign them to placeholder dimensions, `x` and `y`.\n",
     "\n",
