--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -52,7 +52,7 @@
     "\n",
     "Then we must define the relations between the data. This is done via the `Variable` model.\n",
     "\n",
-    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `$time`, which links this dimension to the variable named `time`. \n",
+    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `*`, which links this dimension to the variable named `time`. \n",
     "\n",
     "The special character `*` denotes that it is a dimension, which should also be specified in the `dims` list. \n",
     "\n",
