--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -90,7 +90,7 @@
    "id": "63849a97",
    "metadata": {},
    "source": [
-    "As a side note, if we know that `dim1` and `dim2` do not vary per time slice, we can define the variables in a different way. In this case, we can skip `standardize_grid()`. The difference is that for `dim1` and `dim2`, we do not set the time index (i.e. the path no longer contains the index `$time`) and the dimension name refers to itself."
+    "As a side note, if we know that `dim1` and `dim2` do not vary per time slice, we can define the variables in a different way. In this case, we can skip `standardize_grid()`. The difference is that for `dim1` and `dim2`, we do not set the time index (i.e. the path no longer contains the index `*`) and the dimension name refers to itself."
    ]
   },
   {
