Remove dead code (#270)
* Remove dead code and update documentation
* Update notebooks
* Mark failing test

--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Then we must define the relations between the data. This is done via the `Variable` model.\n",
     "\n",
-    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `$time`, which links this dimension to the variable named `time`. \n",
+    "This gives the name of the variable (user defined), the ids to grab it from, the path to the data. Note that the time dimension can be defined by `*`, which links this dimension to the variable named `time`. \n",
     "\n",
     "2D variables like `psi` have two dimensions, in this case we use `grid/dim1` and `grid/dim2`. Because these may vary between time slices, we assign them to placeholder dimensions, `x` and `y`.\n",
     "\n",
@@ -90,7 +90,7 @@
    "id": "63849a97",
    "metadata": {},
    "source": [
-    "As a side note, if we know that `dim1` and `dim2` do not vary per time slice, we can define the variables in a different way. In this case, we can skip `standardize_grid()`. The difference is that for `dim1` and `dim2`, we do not set the time index (i.e. the path no longer contains the index `$time`) and the dimension name refers to itself."
+    "As a side note, if we know that `dim1` and `dim2` do not vary per time slice, we can define the variables in a different way. In this case, we can skip `standardize_grid()`. The difference is that for `dim1` and `dim2`, we do not set the time index (i.e. the path no longer contains the index `*`) and the dimension name refers to itself."
    ]
   },
   {
