--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -33,9 +33,9 @@
     "from duqtools.api import ImasHandle\n",
     "\n",
     "paths = (\n",
-    "    'test/94875/8000',\n",
-    "    'test/94875/8001',\n",
-    "    'test/94875/8002',\n",
+    "    'g2vazizi/jet/94875/8000',\n",
+    "    'g2vazizi/jet//94875/8001',\n",
+    "    'g2vazizi/jet//94875/8002',\n",
     ")\n",
     "handles = [ImasHandle.from_string(p) for p in paths]"
    ]
@@ -935,7 +935,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
