Update `handle.get(...)` usage to `handle.get_variables(...)`

--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -148,10 +148,7 @@
     "datasets = []\n",
     "\n",
     "for handle in handles:\n",
-    "    ids = variables[0].ids\n",
-    "    \n",
-    "    data_map = handle.get(ids)\n",
-    "    ds = data_map.to_xarray(variables=variables)\n",
+    "    ds = handle.get_variables(variables=variables)\n",
     "    \n",
     "    ds = standardize_grid(\n",
     "        ds,\n",
