--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -49,7 +49,7 @@
     "\n",
     "Many variables are pre-defined by `duqtools`. These variables define the relations between the data. For more information, see the [documentation on variables](https://duqtools.readthedocs.io/en/latest/variables/).\n",
     "\n",
-    "To get the data, we can use `ImasHandle.get()` and pass the names of the variables we are interested in. Note that they must all belong to the same root IDS (`core_profiles` in this case)."
+    "To get the data, we can use `ImasHandle.get_variables()` and pass the names of the variables we are interested in. Note that they must all belong to the same root IDS (`core_profiles` in this case)."
    ]
   },
   {
