--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -33,9 +33,9 @@
     "from duqtools.api import ImasHandle\n",
     "\n",
     "paths = (\n",
-    "    'test/94875/8000',\n",
-    "    'test/94875/8001',\n",
-    "    'test/94875/8002',\n",
+    "    'g2vazizi/jet/94875/8000',\n",
+    "    'g2vazizi/jet//94875/8001',\n",
+    "    'g2vazizi/jet//94875/8002',\n",
     ")\n",
     "handles = [ImasHandle.from_string(p) for p in paths]"
    ]
@@ -148,10 +148,7 @@
     "datasets = []\n",
     "\n",
     "for handle in handles:\n",
-    "    ids = variables[0].ids\n",
-    "    \n",
-    "    data_map = handle.get(ids)\n",
-    "    ds = data_map.to_xarray(variables=variables)\n",
+    "    ds = handle.get_variables(variables=variables)\n",
     "    \n",
     "    ds = standardize_grid(\n",
     "        ds,\n",
@@ -935,7 +932,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.13"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
