--- a/docs/examples/xarray-2D.ipynb
+++ b/docs/examples/xarray-2D.ipynb
@@ -34,8 +34,8 @@
     "\n",
     "paths = (\n",
     "    'g2vazizi/jet/94875/8000',\n",
-    "    'g2vazizi/jet//94875/8001',\n",
-    "    'g2vazizi/jet//94875/8002',\n",
+    "    'g2vazizi/jet/94875/8001',\n",
+    "    'g2vazizi/jet/94875/8002',\n",
     ")\n",
     "handles = [ImasHandle.from_string(p) for p in paths]"
    ]
