Update variable names to match variables.yaml lookup

--- a/docs/examples/xarray-ions.ipynb
+++ b/docs/examples/xarray-ions.ipynb
@@ -85,7 +85,7 @@
     "\n",
     "IMAS data may not be on the same grid (i.e. x-values do not corespond between data sets) or use the same time steps. Therefore, the data must be standardized to the same set of reference coordinates so that the grid and time stamps correspond between different data sets. Because this is such a common operation, *duqtools* has helper functions to deal with these special cases. `standardize_grid` and `rebase_on_grid` helps to rebase on the grid, and `rebase_on_time` to rebase on the time stamps.\n",
     "\n",
-    "We assigned placeholder dimensions (`x`) to the data variables, `zeff`, `t_i_average` and `rho_tor_norm`. To make `rho_tor_norm` internally consistent for each dataset, we can use `standardize_grid()`.\n",
+    "We assigned placeholder dimensions (`x`) to the data variables, `zeff`, `t_i_ave` and `rho_tor_norm`. To make `rho_tor_norm` internally consistent for each dataset, we can use `standardize_grid()`.\n",
     "\n",
     "We pass the dimension along which to group the data (`time`), the name of the old dimension (`x`), and the new dimension to use as the new dimension (`rho_tor_norm`). For `new_dim_data`, we can pass the coordinates to use, or an integer to grab the coordinates from the group with this index.\n",
     "\n",
