--- a/docs/examples/xarray.ipynb
+++ b/docs/examples/xarray.ipynb
@@ -994,7 +994,7 @@
    "source": [
     "## Standardize grid and time\n",
     "\n",
-    "IMAS data may not be on the same grid (i.e. x-values do not corespond between data sets) or use the same time steps. Therefore, the data must be standardized to the same set of reference coordinates so that the grid and time stamps correspond between different data sets. Because this is such a common operation, *duqtools* has helper functions to deal with these special cases. `rebase_on_grid` helps to rebase on the grid, and `rebase_on_time` to rebase on the time stamps. `standardize_grid_and_time` combines these two functions and can make a sequence of datasets concistent."
+    "IMAS data may not be on the same grid (i.e. x-values do not corespond between data sets) or use the same time steps. Therefore, the data must be standardized to the same set of reference coordinates so that the grid and time stamps correspond between different data sets. Because this is such a common operation, *duqtools* has helper functions to deal with these special cases. `rebase_on_grid` helps to rebase on the grid, and `rebase_on_time` to rebase on the time stamps. `standardize_grid_and_time` combines these two functions and can make a sequence of datasets consistent."
    ]
   },
   {
@@ -2017,7 +2017,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5de5a5b4",
+   "id": "b1b8a9ee",
    "metadata": {},
    "source": [
     "## Interactive plots\n",
@@ -2114,7 +2114,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b80c69a",
+   "id": "4d0f4cf7",
    "metadata": {},
    "source": [
     "And errorband charts:"
