Fix title and typo

--- a/docs/examples/demo_single_run.ipynb
+++ b/docs/examples/demo_single_run.ipynb
@@ -5,7 +5,7 @@
    "id": "2e3c1974",
    "metadata": {},
    "source": [
-    "# Duqtools\n",
+    "# Duqtools demo: single UQ run\n",
     "\n",
     "This notebook shows how to use [duqtools](https://duqtools.readthedocs.org) to do validation for a single run.\n",
     "\n",
@@ -708,7 +708,7 @@
     "\n",
     "The template uses [jinja2](https://jinja.palletsprojects.com/en/latest/) as a templating language.\n",
     "\n",
-    "Accolates (`{..}`) denote placeholders that will be replaced by the templating `jinja2`. Three objects are currently available (`run` to denote the run name, `handle` to reference the imas data, and `variables` to reference variables from the IDS data. See the [documentation](https://duqtools.readthedocs.io/en/latest/large_scale_validation/#placeholder-variables) for more information about these placeholders. \n",
+    "Accolades (`{..}`) denote placeholders that will be replaced by the templating `jinja2`. Three objects are currently available (`run` to denote the run name, `handle` to reference the imas data, and `variables` to reference variables from the IDS data. See the [documentation](https://duqtools.readthedocs.io/en/latest/large_scale_validation/#placeholder-variables) for more information about these placeholders. \n",
     "\n",
     "The template supports functions to modify the placeholders or do some simple logic. The example below does some rounding of the variables using the `round()` function. The end time is calculated by taking the start time and adding 0.01 s."
    ]
